Fix svg alignment

--- a/sass/views/_diary.scss
+++ b/sass/views/_diary.scss
@@ -277,7 +277,6 @@ body.single-diary {
         height: 16px;
         min-width: 16px;
         position: relative;
-        top: .3rem;
         width: 16px;
       }
 
